[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "News_API.org"
version = "0.0.1"
authors = [
  { name="Cade Jurgensen"},
]
description = "A package to interact with the API for 'newsapi.org'"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/C-Jurgensen/newsapi.org_API"
Issues = "https://github.com/C-Jurgensen/newsapi.org_API"