[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/NewsApi"]

[project]
name = "News_API.org"
version = "1.0"
dependencies=[
    "requests",
]
authors = [
  { name="CJurgensen"},
]
description = "**Note: Not an official package for this API.**\n A package to interact with the API for 'newsapi.org'."
readme = "README.md"
install_requires=["requests"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/C-Jurgensen/newsapi.org_API"
Issues = "https://github.com/C-Jurgensen/newsapi.org_API"
